@@ -257,12 +257,12 @@ protected:  // methods
     afx_msg void    OnNavigatePrevinlinediff();
     afx_msg void    OnKeyDown(UINT nChar, UINT nRepCnt, UINT nFlags);
     afx_msg void    OnLButtonDown(UINT nFlags, CPoint point);
+    afx_msg void    OnLButtonUp(UINT nFlags, CPoint point);
     afx_msg void    OnLButtonDblClk(UINT nFlags, CPoint point);
     virtual void    OnLButtonTrippleClick(UINT nFlags, CPoint point);
     afx_msg void    OnEditCopy();
     afx_msg void    OnMouseMove(UINT nFlags, CPoint point);
     afx_msg void    OnTimer(UINT_PTR nIDEvent);
-    afx_msg void    OnMouseLeave();
     afx_msg void    OnChar(UINT nChar, UINT nRepCnt, UINT nFlags);
     afx_msg void    OnCaretDown();
     afx_msg void    OnCaretLeft();
@@ -408,7 +408,6 @@ protected:  // variables
     BOOL            m_bFocused;
     BOOL            m_bViewLinenumbers;
     BOOL            m_bIsHidden;
-    BOOL            m_bMouseWithin;
     BOOL            m_bIconLFs;
     int             m_nLineHeight;
     int             m_nCharWidth;
